--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ body {
 #root,
 .App {
 	height: 100%;
+	background: url('./assets/tile_background.png');
 }
 
 /* -------------------------------- Scrollbar ------------------------------- */
