--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-		'Helvetica Neue', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	height: 100vh;
@@ -29,26 +28,26 @@ body {
 	height: 0px;
 }
 ::-webkit-scrollbar-thumb {
-	background: #dbeafe;
-	border: 0px none #ffffff;
+	background: transparent;
+	border: 0px none transparent;
 	border-radius: 50px;
 }
 ::-webkit-scrollbar-thumb:hover {
-	background: #ffffff;
+	background: transparent;
 }
 ::-webkit-scrollbar-thumb:active {
 	background: #000000;
 }
 ::-webkit-scrollbar-track {
-	background: #ffffff;
-	border: 0px none #ffffff;
+	background: transparent;
+	border: 0px none transparent;
 	border-radius: 7px;
 }
 ::-webkit-scrollbar-track:hover {
-	background: #ffffff;
+	background: transparent;
 }
 ::-webkit-scrollbar-track:active {
-	background: #ffffff;
+	background: transparent;
 }
 ::-webkit-scrollbar-corner {
 	background: transparent;
@@ -95,4 +94,11 @@ body {
 
 .category__control--is-focused {
 	all: unset;
+}
+
+form .category__control--menu-is-open,
+form .category__control--menu-is-focused,
+form .category__input {
+	border: white !important;
+	outline: white !important;
 }
